%YAML 1.1
%TAG !u! tag:unity3d.com,2011:
--- !u!91 &9100000
AnimatorController:
  m_ObjectHideFlags: 0
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: controllerAbout
  serializedVersion: 2
  m_AnimatorParameters:
  - m_Name: fwd
    m_Type: 4
    m_DefaultVector: {x: 0, y: 0, z: 0}
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: bwd
    m_Type: 4
    m_DefaultVector: {x: 0, y: 0, z: 0}
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: left
    m_Type: 4
    m_DefaultVector: {x: 0, y: 0, z: 0}
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: right
    m_Type: 4
    m_DefaultVector: {x: 0, y: 0, z: 0}
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: shoot
    m_Type: 4
    m_DefaultVector: {x: 0, y: 0, z: 0}
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: death
    m_Type: 4
    m_DefaultVector: {x: 0, y: 0, z: 0}
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  m_AnimatorLayers:
  - serializedVersion: 3
    m_Name: Base Layer
    m_StateMachine: {fileID: 110700000}
    m_Mask: {fileID: 0}
    m_BlendingMode: 0
    m_SyncedLayerIndex: -1
    m_StateMachineMotionSetIndex: 0
    m_DefaultWeight: 0
    m_IKPass: 0
    m_SyncedLayerAffectsTiming: 0
    m_Controller: {fileID: 9100000}
--- !u!1101 &110100000
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110227461}
  m_DstState: {fileID: 110200000}
  m_TransitionDuration: .25
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: fwd
    m_EventTreshold: 0
    m_ExitTime: .75
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110101233
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110265335}
  m_DstState: {fileID: 110227461}
  m_TransitionDuration: .000568532792
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 2
    m_ConditionEvent: right
    m_EventTreshold: 0
    m_ExitTime: .9375
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110102149
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110229379}
  m_DstState: {fileID: 110218447}
  m_TransitionDuration: .0833333358
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: death
    m_EventTreshold: 0
    m_ExitTime: .916666687
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110102562
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110262276}
  m_DstState: {fileID: 110209216}
  m_TransitionDuration: .0625
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 2
    m_ConditionEvent: bwd
    m_EventTreshold: 0
    m_ExitTime: .9375
  - m_ConditionMode: 1
    m_ConditionEvent: right
    m_EventTreshold: 0
    m_ExitTime: .9375
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110103002
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110227461}
  m_DstState: {fileID: 110265335}
  m_TransitionDuration: .25
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: right
    m_EventTreshold: 0
    m_ExitTime: .75
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110104699
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110209216}
  m_DstState: {fileID: 110227461}
  m_TransitionDuration: .006304882
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 2
    m_ConditionEvent: left
    m_EventTreshold: 0
    m_ExitTime: .9375
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110108509
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110227461}
  m_DstState: {fileID: 110262276}
  m_TransitionDuration: .25
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: bwd
    m_EventTreshold: 0
    m_ExitTime: .75
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110117962
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110200000}
  m_DstState: {fileID: 110227461}
  m_TransitionDuration: .00227384502
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 2
    m_ConditionEvent: fwd
    m_EventTreshold: 0
    m_ExitTime: .9375
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110117971
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110200000}
  m_DstState: {fileID: 110218447}
  m_TransitionDuration: .0625
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: death
    m_EventTreshold: 0
    m_ExitTime: .9375
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110124208
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110209216}
  m_DstState: {fileID: 110200000}
  m_TransitionDuration: .0625
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: fwd
    m_EventTreshold: 0
    m_ExitTime: .9375
  - m_ConditionMode: 2
    m_ConditionEvent: left
    m_EventTreshold: 0
    m_ExitTime: .9375
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110132716
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110200000}
  m_DstState: {fileID: 110265335}
  m_TransitionDuration: .0625
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 2
    m_ConditionEvent: fwd
    m_EventTreshold: 0
    m_ExitTime: .9375
  - m_ConditionMode: 1
    m_ConditionEvent: right
    m_EventTreshold: 0
    m_ExitTime: .9375
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110140366
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110209216}
  m_DstState: {fileID: 110262276}
  m_TransitionDuration: .015075299
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 2
    m_ConditionEvent: left
    m_EventTreshold: 0
    m_ExitTime: .9375
  - m_ConditionMode: 1
    m_ConditionEvent: bwd
    m_EventTreshold: 0
    m_ExitTime: .9375
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110140954
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110209216}
  m_DstState: {fileID: 110218447}
  m_TransitionDuration: .0625
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: death
    m_EventTreshold: 0
    m_ExitTime: .9375
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110144915
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110227461}
  m_DstState: {fileID: 110229379}
  m_TransitionDuration: .25
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: shoot
    m_EventTreshold: 0
    m_ExitTime: .75
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110147940
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110265335}
  m_DstState: {fileID: 110262276}
  m_TransitionDuration: .0137144048
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: bwd
    m_EventTreshold: 0
    m_ExitTime: .9375
  - m_ConditionMode: 2
    m_ConditionEvent: right
    m_EventTreshold: 0
    m_ExitTime: .9375
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110153847
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110200000}
  m_DstState: {fileID: 110209216}
  m_TransitionDuration: .0625
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: left
    m_EventTreshold: 0
    m_ExitTime: .9375
  - m_ConditionMode: 2
    m_ConditionEvent: fwd
    m_EventTreshold: 0
    m_ExitTime: .9375
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110161353
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110265335}
  m_DstState: {fileID: 110218447}
  m_TransitionDuration: .0625
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: death
    m_EventTreshold: 0
    m_ExitTime: .9375
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110163682
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110218447}
  m_DstState: {fileID: 110227461}
  m_TransitionDuration: .0459617376
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent: death
    m_EventTreshold: 0
    m_ExitTime: 1.5
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110165092
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110265335}
  m_DstState: {fileID: 110200000}
  m_TransitionDuration: .0625
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: fwd
    m_EventTreshold: 0
    m_ExitTime: .9375
  - m_ConditionMode: 2
    m_ConditionEvent: right
    m_EventTreshold: 0
    m_ExitTime: .9375
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110167043
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110227461}
  m_DstState: {fileID: 110209216}
  m_TransitionDuration: .25
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: left
    m_EventTreshold: 0
    m_ExitTime: .75
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110175646
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110227461}
  m_DstState: {fileID: 110218447}
  m_TransitionDuration: .18423672
  m_TransitionOffset: .0164408162
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: death
    m_EventTreshold: 0
    m_ExitTime: .782881677
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110181329
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110262276}
  m_DstState: {fileID: 110218447}
  m_TransitionDuration: .0625
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: death
    m_EventTreshold: 0
    m_ExitTime: .9375
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110189462
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110262276}
  m_DstState: {fileID: 110227461}
  m_TransitionDuration: .00552964071
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 2
    m_ConditionEvent: bwd
    m_EventTreshold: 0
    m_ExitTime: .9375
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110190455
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110262276}
  m_DstState: {fileID: 110265335}
  m_TransitionDuration: .0625
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 2
    m_ConditionEvent: bwd
    m_EventTreshold: 0
    m_ExitTime: .9375
  - m_ConditionMode: 1
    m_ConditionEvent: right
    m_EventTreshold: 0
    m_ExitTime: .9375
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110199147
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110229379}
  m_DstState: {fileID: 110227461}
  m_TransitionDuration: .0833333358
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent: shoot
    m_EventTreshold: 0
    m_ExitTime: .920000017
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1102 &110200000
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: forward
  m_Speed: .800000012
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400000, guid: 1f86d7f7a154c3a429595b04709c2b32, type: 3}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: 288, y: -96, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110209216
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: left
  m_Speed: .800000012
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400006, guid: 1f86d7f7a154c3a429595b04709c2b32, type: 3}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: 36, y: 0, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110218447
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: death
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400000, guid: 18c06720cd502f340bac4086b73666d4, type: 3}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: 288, y: 144, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110227461
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: idle
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400010, guid: 1f86d7f7a154c3a429595b04709c2b32, type: 3}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: 288, y: 0, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110229379
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: shoot
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400008, guid: 1f86d7f7a154c3a429595b04709c2b32, type: 3}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: 516, y: 144, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110262276
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: backward
  m_Speed: .800000012
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400002, guid: 1f86d7f7a154c3a429595b04709c2b32, type: 3}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: 36, y: 132, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110265335
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: right
  m_Speed: .800000012
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400004, guid: 1f86d7f7a154c3a429595b04709c2b32, type: 3}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: 552, y: 0, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1107 &110700000
StateMachine:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Base Layer
  m_DefaultState: {fileID: 110227461}
  m_States:
  - {fileID: 110200000}
  - {fileID: 110262276}
  - {fileID: 110265335}
  - {fileID: 110209216}
  - {fileID: 110229379}
  - {fileID: 110227461}
  - {fileID: 110218447}
  m_ChildStateMachine: []
  m_ChildStateMachinePosition: []
  m_OrderedTransitions:
    data:
      first: {fileID: 0}
      second: []
    data:
      first: {fileID: 110227461}
      second:
      - {fileID: 110100000}
      - {fileID: 110108509}
      - {fileID: 110167043}
      - {fileID: 110103002}
      - {fileID: 110144915}
      - {fileID: 110175646}
    data:
      first: {fileID: 110200000}
      second:
      - {fileID: 110117962}
      - {fileID: 110153847}
      - {fileID: 110132716}
      - {fileID: 110117971}
    data:
      first: {fileID: 110262276}
      second:
      - {fileID: 110189462}
      - {fileID: 110190455}
      - {fileID: 110102562}
      - {fileID: 110181329}
    data:
      first: {fileID: 110265335}
      second:
      - {fileID: 110101233}
      - {fileID: 110165092}
      - {fileID: 110147940}
      - {fileID: 110161353}
    data:
      first: {fileID: 110209216}
      second:
      - {fileID: 110104699}
      - {fileID: 110124208}
      - {fileID: 110140366}
      - {fileID: 110140954}
    data:
      first: {fileID: 110229379}
      second:
      - {fileID: 110199147}
      - {fileID: 110102149}
    data:
      first: {fileID: 110218447}
      second:
      - {fileID: 110163682}
  m_MotionSetCount: 1
  m_AnyStatePosition: {x: -228, y: 0, z: 0}
  m_ParentStateMachinePosition: {x: 800, y: 20, z: 0}
